--- a/frontend/src/components/demo.html
+++ b/frontend/src/components/demo.html
@@ -9,9 +9,6 @@
     <ul class="menu">
         <li><a href="#">Home</a></li>
         <li><a href="#">About Us</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Contact Us</a></li>
     </ul>
 </div>
 <div class="main">
@@ -75,7 +72,7 @@ h1{
     top: 0;
     width: 250px;
     margin-top: 60px;
-    transform: translateX(-250px);
+    transform: translateY(-250px);
     transition: transform 250ms ease-in-out;
     background: #2e86de;
 }
@@ -96,7 +93,7 @@ h1{
     text-decoration: none;
 }
 #openSidebarMenu:checked ~ #sidebarMenu {
-    transform: translateX(0);
+    transform: translateY(0);
 }
 
 input#openSidebarMenu{
