--- a/frontend/src/pages/Donor/Donor.css
+++ b/frontend/src/pages/Donor/Donor.css
@@ -1,12 +1,12 @@
-.input-box{
-    padding: 15px;
-     padding-top: 0px
+.input-box {
+  padding: 15px;
+  padding-top: 0px;
 }
-.table-head{
-    text-align: center !important;
+.table-head {
+  text-align: center !important;
 }
-.Del-btn{
-    margin: 40px;
-    display: flex;
-    justify-content: space-evenly;
+.Del-btn {
+  margin: 40px;
+  display: flex;
+  justify-content: space-evenly;
 }
