after merge with chinmay and tejas pushing code

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -62,7 +62,7 @@ a {
 }
 
 .bg-gradient-theme {
-  background: linear-gradient(to bottom, #6a82fb, #0f131f);
+  /* background: linear-gradient(to bottom, #6a82fb, #0f131f); */
   box-shadow: 0 0 0 2000px rgb(0 0 0 / 0%);
 }
 
@@ -74,13 +74,18 @@ a {
 form.login {
   width: 500px;
   background: white;
-  padding: 14% 45px;
-  margin: 30px auto;
+  padding: 10% 45px;
+  margin: auto;
+  position: relative;
+  top: 14%;
 }
-/* .loginbg {
-  background-image: url('./assets/img/background/login-register.jpg') cover
-    no-repeat !important;
-} */
+.loginbg {
+  background-image: url('./assets/img/background/login-register.jpg');
+  padding: 25px;
+  background-repeat: no-repeat;
+  background-size: auto;
+  height: 100vh;
+}
 .css-zjtspp-MuiPaper-root {
   box-shadow: none !important;
 }
