--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -71,6 +71,16 @@ a {
   position: fixed !important;
   width: 260px !important;
 }
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  background-color: #33363f;
+  text-align: center;
+  z-index: 999;
+}
 form.login {
   width: 500px;
   background: white;
