--- a/backend/utils/templates/partner.html
+++ b/backend/utils/templates/partner.html
@@ -14,10 +14,9 @@
         <table class="table">
             <thead class="thead-dark">
                 <tr>
-                    <th scope="col">firstName</th>
-                    <th scope="col">lastName</th>
-                    <th scope="col">mobile</th>
+                    <th scope="col">name</th>
                     <th scope="col">email</th>
+                    <th scope="col">mobile</th>
                     <th scope="col">gstNumber</th>
                     <th scope="col">panNumber</th>
                     <th scope="col">gstImage</th>
@@ -31,8 +30,7 @@
                 {{#each partner}}
                 <tr>
                     
-                    <td>{{this.dataValues.firstName}}</td>
-                    <td>{{this.dataValues.lastName}}</td>
+                    <td>{{this.dataValues.name}}</td>
                     <td>{{this.dataValues.mobile}}</td>
                     <td>{{this.dataValues.email}}</td>
                     <td>{{this.dataValues.gstNumber}}</td>
