--- a/one_inr_web/src/Components/layout/Layout.css
+++ b/one_inr_web/src/Components/layout/Layout.css
@@ -1,3 +1,6 @@
+footer {
+  padding: 5em 0;
+}
 /* changes */
 .footer-04 {
   background: #272727;
@@ -85,7 +88,7 @@
   color: #fff !important;
   display: block;
   width: 52px;
-  height: 52px;
+  height: 38px;
   font-size: 16px;
   background: #f7b633 !important;
   border: none;
