partner pdf export

--- a/backend/utils/templates/partner.html
+++ b/backend/utils/templates/partner.html
@@ -31,7 +31,7 @@
                 <tr>
                     
                     <td>{{this.dataValues.name}}</td>
-                    <td>{{this.dataValues.mobile}}</td>
+                    <td>{{this.dataValues.phone}}</td>
                     <td>{{this.dataValues.email}}</td>
                     <td>{{this.dataValues.gstNumber}}</td>
                     <td>{{this.dataValues.panNumber}}</td>
