added reciept generation number on user reciept

--- a/backend/utils/templates/receipt.html
+++ b/backend/utils/templates/receipt.html
@@ -9,8 +9,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="text-center my-3">1INR</h1>
+    <h1 class="text-center my-3">FOUNDATION NAME</h1>
+    <p>Address</p>
     <div class="w-75 m-auto">
+
+
         <table class="table">
             <thead class="thead-dark">
                 <tr>
@@ -19,10 +22,10 @@
                     <th scope="col">amount</th>
                     <th scope="col">Date</th>
                     <th scope="col">Words</th>
-
-
                 </tr>
             </thead>
+
+
             <tbody>
                 
                 <tr>
@@ -33,8 +36,6 @@
                     <td>{{amountInWords}}</td>
     
                 </tr>
-                
-
             </tbody>
         </table>
         
