account sidebar updated

--- a/one_inr_web/src/Components/Contact/contact.css
+++ b/one_inr_web/src/Components/Contact/contact.css
@@ -1,6 +1,6 @@
 .contact-content .entry-content {
-  height: 600px;
-  border: 2px solid red;
+  height: 500px;
+  /* border: 2px solid red; */
 }
 .form-contact,
 .contact-info {
