--- a/one_inr_web/src/index.css
+++ b/one_inr_web/src/index.css
@@ -13,258 +13,7 @@ body {
   font-family: "Rubik", sans-serif;
   font-weight: 400;
 }
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-font,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td {
-  border: 0;
-  font-size: 100%;
-  margin: 0;
-  outline: 0;
-  padding: 0;
-  vertical-align: baseline;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  clear: both;
-  color: #222222;
-  font-family: "Rubik", sans-serif;
-  font-weight: 600;
-}
-h1 {
-  font-size: 24px;
-}
-h2 {
-  font-size: 20px;
-}
-h3 {
-  font-size: 18px;
-}
-h4 {
-  font-size: 16px;
-}
-h5 {
-  font-size: 14px;
-}
-h6 {
-  font-size: 12px;
-}
-img {
-  border: none;
-  max-width: 100%;
-  height: auto;
-  width: 100%;
-}
-a {
-  color: #222222;
-  display: block;
-}
-a:hover {
-  color: #00a6eb;
-  text-decoration: none;
-}
-a:focus {
-  text-decoration: none;
-  color: inherit;
-  outline: none;
-  outline-offset: initial;
-  box-shadow: initial;
-  border: 0;
-}
-
-/* code {
+code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-} */
-
-/* Authentication CSS */
-.site-main {
-  padding-bottom: 100px !important;
-}
-.page-title {
-  position: relative;
-  min-height: 220px;
-  margin-bottom: 50px;
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.page-title:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.3);
-}
-.page-title .container {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.page-title h1 {
-  font-size: 26px;
-  font-weight: 500;
-  color: #fff;
-  margin-bottom: 12px;
-}
-.page-title .container {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.page-title .breadcrumbs li,
-.page-title .breadcrumbs li a {
-  list-style: none;
-  display: inline-block;
-  color: #fff;
-}
-.form-login {
-  max-width: 40%;
-  margin: 0 auto;
-}
-.form-login h2 {
-  font-size: 18px;
-  margin-bottom: 20px;
-}
-.form-login input {
-  border: 1px solid #ededed;
-  width: 100%;
-  height: 46px;
-}
-.form-login .inline {
-  margin-top: 10px;
-}
-.form-login .inline p {
-  float: right;
-  /* display: inline-block; */
-  line-height: 46px;
-  color: #222222;
-}
-.form-login .inline p a {
-  display: inline-block;
-  text-decoration: underline;
-}
-form .field {
-  margin-bottom: 26px;
-}
-select,
-.field input {
-  width: 100%;
-  height: 3em;
-  padding: 0px 15px;
-}
-a {
-  color: #222222;
-  display: block;
-}
-
-/* Profile CSS */
-.account-bar,
-.account-content {
-  background-color: #f5f6f6;
-  overflow: hidden;
-}
-.account-bar li.active a {
-  background-color: #00a6eb;
-  color: #fff;
-}
-.account-bar li a,
-.account-content .account-title {
-  font-weight: 500;
-  padding: 15px 30px;
-}
-.account-bar li {
-  list-style: none;
-}
-.account-content .account-main {
-  padding: 40px 30px;
-}
-.account-content .account-title {
-  background-color: #ededed;
-  font-size: 14px;
-}
-.profile-box {
-  margin-bottom: 60px;
-}
-.profile-box h3 {
-  font-size: 16px;
-  margin-bottom: 20px;
-}
-.profile-box li {
-  list-style: none;
-  margin-bottom: 20px;
-}
-.profile-box li strong {
-  font-size: 14px;
-  color: #222222;
-  font-weight: 500;
-  width: 12%;
-  float: left;
-}
-.profile-box li .profile-text {
-  width: 80%;
-  float: left;
 }
