csv pdf xlsx changes

--- a/backend/utils/templates/viewUpcomingDoner.html
+++ b/backend/utils/templates/viewUpcomingDoner.html
@@ -14,11 +14,10 @@
         <table class="table">
             <thead class="thead-dark">
                 <tr>
-                    <th scope="col">name</th>
-                    <th scope="col">companyName</th>
-                    <th scope="col">mobile</th>
-                    <th scope="col">email</th>
-                    <th scope="col">gstNumber</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Donted</th>
+                    <th scope="col">Balance</th>
+                    <th scope="col">Project</th>
                 </tr>
             </thead>
             <tbody>
@@ -26,10 +25,9 @@
                 <tr>
                     
                     <td>{{this.dataValues.name}}</td>
-                    <td>{{this.dataValues.companyName}}</td>
-                    <td>{{this.dataValues.phone}}</td>
-                    <td>{{this.dataValues.email}}</td>
-                    <td>{{this.dataValues.gstNumber}}</td>
+                    <td>{{this.dataValues.donated}}</td>
+                    <td>{{this.dataValues.balance}}</td>
+                    <td>{{this.dataValues.project}}</td>
             
                 </tr>
                 {{/each}}
