--- a/one_inr_web/src/Components/sass/campaigns.scss
+++ b/one_inr_web/src/Components/sass/campaigns.scss
@@ -1,6 +1,6 @@
 .campaigns {
-  padding: 2rem;
-  height: 90vh;
+  // padding: 0.5rem ;
+  height: 100vh;
 
   &__sec {
     display: grid;
@@ -9,13 +9,13 @@
     justify-content: center;
     align-content: start;
     gap: 2rem;
-    padding: 0rem 5.5rem;
-    height: 70vh;
-    overflow: hidden;
+    padding: 0rem 10.8rem;
+    height: 80vh;
+    // padding: 2rem;
   }
 
   &__nav {
-    height: 100%;
+    height: 80%;
     background-color: white;
   }
 
