--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -39,9 +39,7 @@ body {
 
   margin: 8px;
 }
-.cr-content.container-fluid {
-  /* background-color: #6a82fb; */
-}
+
 form.w-50.m-auto {
   background: white;
   border-radius: 20px;
@@ -83,4 +81,24 @@ form.w-50.m-auto {
 .btn.focus {
   outline: 0;
   box-shadow: none !important;
+}
+
+.inputStyleBox {
+  width: 3rem !important;
+  height: 3rem;
+  margin: 0 1rem;
+  font-size: 2rem;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+.btn-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+.psw-feild{
+  outline: 0px;
+  border-Radius: 30px;
+  padding-Left:12px !important;
 }
