--- a/backend/utils/templates/upcomingDonor.html
+++ b/backend/utils/templates/upcomingDonor.html
@@ -14,22 +14,26 @@
         <table class="table">
             <thead class="thead-dark">
                 <tr>
-                    <th scope="col">Renewal Date</th>
-                    <th scope="col">Name</th>
+                    <th scope="col">name</th>
+                    <th scope="col">email</th>
+                    <th scope="col">phone</th>
                     <th scope="col">Donated</th>
                     <th scope="col">Balance</th>
-                    
+                    <th scope="col">Projects</th>
+
                 </tr>
             </thead>
             <tbody>
                 {{#each partner}}
                 <tr>
                     
-                    <td>{{this.dataValues.balanceRenewalDate}}</td>
                     <td>{{this.dataValues.name}}</td>
+                    <td>{{this.dataValues.email}}</td>
                     <td>{{this.dataValues.mobile}}</td>
+                    <td>{{this.dataValues.donated}}</td>
                     <td>{{this.dataValues.balance}}</td>
-            
+                    <td>{{this.dataValues.Projects}}</td>
+                    
                 </tr>
                 {{/each}}
 
