After View transaction Modal

--- a/frontend/src/pages/Doner/Donor.css
+++ b/frontend/src/pages/Doner/Donor.css
@@ -12,3 +12,16 @@
     border-Radius: 30px;
     padding-Left:12px !important;
 }
+/* .modal-content {
+    position: relative;
+    right: 60%;
+    display: flex;
+    flex-direction: column;
+    width: 883px !important;
+    pointer-events: auto;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 0.3rem;
+    outline: 0;
+} */
