--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -162,3 +162,20 @@ input::-webkit-inner-spin-button {
   background-color: transparent;
   border: 0;
 }
+.headCard{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+margin-top: 13vh;
+}
+
+.contentCard{
+  background-color: #fff;
+  margin: 30px;
+}
