After Project Redux structure and Settings module designs

--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -101,4 +101,5 @@ form.w-50.m-auto {
   outline: 0px;
   border-Radius: 30px;
   padding-Left:12px !important;
+  border: 1px solid #ced4da !important;
 }
