--- a/frontend/src/pages/Doner/Donor.css
+++ b/frontend/src/pages/Doner/Donor.css
@@ -11,6 +11,7 @@
     outline: 0px;
     border-Radius: 30px;
     padding-Left:12px !important;
+    border: 1px solid #ced4da !important;
 }
 /* .modal-content {
     position: relative;
