--- a/frontend/src/pages/projects/project.css
+++ b/frontend/src/pages/projects/project.css
@@ -38,7 +38,7 @@
   outline: 0px;
   padding: 0px;
   vertical-align: baseline;
-  color: #555555;
+  /* color: #555555; */
   font-family: Rubik, sans-serif;
   text-align: justify;
 }
