--- a/frontend/src/pages/NGO/ngo.css
+++ b/frontend/src/pages/NGO/ngo.css
@@ -4,7 +4,7 @@
     background-color: white;
   }
   .white-box{
-      background-color: #fefefe;
+      background-color: #41b3f9;
       padding: 25px;
       margin-bottom: 30px;
   }
