my profile redux created

--- a/frontend/src/pages/NGO/ngo.css
+++ b/frontend/src/pages/NGO/ngo.css
@@ -7,7 +7,7 @@
 .white-box {
   background-color: white;
   padding: 25px;
-  margin-bottom: 30px;
+  margin-bottom: 5em;
 }
 
 /* For image in add ngo */
