--- a/frontend/src/pages/projects/project.css
+++ b/frontend/src/pages/projects/project.css
@@ -8,7 +8,7 @@
   max-width: 100%;
   padding: 25px;
   margin: 25px;
-  margin-bottom: 30px;
+  margin-bottom: 5em;
 }
 .ViewAll {
   /* padding: 40px; */
