--- a/frontend/src/styles/components/_sidebar.scss
+++ b/frontend/src/styles/components/_sidebar.scss
@@ -32,14 +32,14 @@
   }
 
   &::before {
-    background: #000;
+    // background: #e8f4f8;
     opacity: 0.33;
   }
 
   &::after {
     z-index: 3;
     // sublime light
-    background: #0f131f; /* fallback for old browsers */
+    background: #e8f4f8; /* fallback for old browsers */
     opacity: 1;
   }
 
@@ -105,7 +105,7 @@
 
     .nav-item {
       margin: 5px 10px;
-      color: theme-color(light);
+      color: theme-color(dark);
       border-radius: 4px;
       opacity: 0.86;
     }
@@ -114,10 +114,10 @@
       // @include media-breakpoint-down(md) {
       //   padding: .5rem;
       // }
-      color: theme-color(light);
+      color: theme-color(dark);
 
       &:hover {
-        background: rgba(theme-color(light), 0.15);
+        background: rgba(theme-color(dark), 0.15);
       }
     }
   }
