--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,8 +14,7 @@
   position: absolute;
   bottom: 0;
   left: 15px;
-  border-bottom-right-radius: 3px;
-  border-bottom-left-radius: 3px;
+  border-radius: 10px;
 }
 
 .nav-tabs {
@@ -39,7 +38,32 @@
 .nav-item :hover {
   transform: translate(0px, 0px);
 }
+.overview {
+  text-align: 'left';
+  font-size: 25;
+  margin-bottom: '0';
+  padding-top: '0.5em';
+  position: relative;
+}
+.overview::after {
+  content: '';
+  height: 6px;
+  width: 40px;
+  background-color: #63b8ec;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  position: absolute;
+  bottom: 0;
+  top: 27px;
+  left: 0px;
+}
 
+.BankDet {
+  position: relative;
+  text-align: 'left';
+  font-weight: 'bold';
+  font-size: 25;
+}
 .BankDet::after {
   content: '';
   height: 4px;
@@ -47,7 +71,11 @@
   background-color: #3b7cff;
   position: absolute;
   bottom: 0;
-  left: 15px;
-  border-bottom-right-radius: 3px;
-  border-bottom-left-radius: 3px;
+  top: 1.5em;
+  left: 0px;
+  border-radius: 10px;
+}
+.modal-content {
+  /* width: 70% !important; */
+  border-radius: 1rem !important;
 }
