--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -222,7 +222,9 @@ input::-webkit-inner-spin-button {
   padding: 15px;
   padding-top: 0px;
 }
-
+.css-6hp17o-MuiList-root-MuiMenu-list {
+  display: grid;
+}
 /* For mobile phones: */
 @media only screen and (max-width: 567px) {
 }
