--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,15 +8,19 @@
 
 .nav-tabs .nav-link.active::after {
   content: '';
-  height: 4px;
+  height: 5px;
   width: 40px;
   background-color: #3b7cff;
   position: absolute;
   bottom: 0;
-  left: 15px;
+  left: 0;
   border-radius: 10px;
 }
 
+.nav-link {
+  padding-left: 0 !important  ;
+  padding-right: 2rem !important;
+}
 .nav-tabs {
   border: none !important;
 }
@@ -63,7 +67,7 @@
   position: relative;
   text-align: left;
   font-weight: bold;
-  font-size: 25;
+  font-size: 25px;
 }
 .BankDet::after {
   content: '';
@@ -127,3 +131,6 @@
 /* .Edit-NGO-logo-p:hover .Edit-NGO-logo-img {
   opacity: 0.7;
 } */
+.carousel-indicators {
+  display: none;
+}
